@@ -1,6 +1,7 @@
 grass (7.0.0-1~exp2) UNRELEASED; urgency=medium
 
   * Use upstream grass startup script, and install custom x-grass7 as x-grass70.
+  * Add Conflicts to the grass70* packages provided by upstream.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sat, 21 Feb 2015 18:46:48 +0100
 
